# neuroevolution-flappy-bird

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
config/: config.json
docs/: SMG.md  WORKFLOWS.md
neuroevolution_flappy_bird/: flappy_bird_app.py  main.py
neuroevolution_flappy_bird/ga/: bird_ga.py  bird_member.py
neuroevolution_flappy_bird/objects/: bird.py  pipe.py
neuroevolution_flappy_bird/pg/: app.py
src/flappy_bird/: flappy_bird_app.py  flappy_bird_ga.py
src/flappy_bird/ga/: bird_ga.py  bird_member.py
src/flappy_bird/objects/: bird.py  pipe.py
tests/: test_flappy_bird_app.py
tests/flappy_bird/: test_flappy_bird_app.py
tests/flappy_bird/ga/: test_bird_ga.py  test_bird_member.py
tests/flappy_bird/objects/: test_bird.py  test_pipe.py
tests/flappy_bird/pg/: test_app.py
tests/ga/: test_bird_ga.py  test_bird_member.py
tests/objects/: test_bird.py  test_pipe.py
tests/pg/: test_app.py
