[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuroevolution-flappy-bird"
version = "0.1.0"
description = "A Pygame implementation of training AI to play Flappy Bird using neuroevolution."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Javid Ahmed", email = "javidahmed@icloud.com" }
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "neural-network @ git+https://github.com/javidahmed64592/neural-network",
    "genetic-algorithm @ git+https://github.com/javidahmed64592/genetic-algorithm",
    "pygame>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "template-python[dev] @ git+https://github.com/javidahmed64592/template-python.git",
]

[project.urls]
repository = "https://github.com/javidahmed64592/neuroevolution-flappy-bird"

[project.scripts]
flappy-bird = "neuroevolution_flappy_bird.main:run"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
  "neuroevolution_flappy_bird/**",
  "LICENSE",
  "README.md",
]

[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--cov",
    "--cov-report",
    "term-missing",
]

[tool.coverage.run]
branch = true
source = ["neuroevolution_flappy_bird", "tests"]

[tool.coverage.report]
fail_under = 80
skip_covered = false
show_missing = true

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

extend-exclude = [
    "**/__init__.py",
]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "C4",
    "D",
    "E",
    "EM",
    "F",
    "FBT",
    "G",
    "I",
    "ISC",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PL",
    "PT",
    "RET",
    "RUF",
    "S",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D203",
    "D213",
    "PLR0913",
    "S101"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
warn_unused_configs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "neuroevolution_flappy_bird.*",
    "neural_network.*",
    "genetic_algorithm.*",
]
ignore_missing_imports = true
